--- a/04_Transfer_Learning_P1.ipynb
+++ b/04_Transfer_Learning_P1.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyNkHg9keid4NNI9CzLk+OiH",
+      "authorship_tag": "ABX9TyNjazucK9F+WiVP5tMTYC9s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,7 +53,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZgeSbH6BxJfG",
-        "outputId": "3d5a56d4-f2b5-4fb1-b1ae-56a1ee5c0f48"
+        "outputId": "b5c3f0b6-c093-47e3-aa20-fb3a76e70233"
       },
       "execution_count": 1,
       "outputs": [
@@ -61,7 +61,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Fri Oct 27 20:26:10 2023       \n",
+            "Mon Oct 30 19:48:56 2023       \n",
             "+-----------------------------------------------------------------------------+\n",
             "| NVIDIA-SMI 525.105.17   Driver Version: 525.105.17   CUDA Version: 12.0     |\n",
             "|-------------------------------+----------------------+----------------------+\n",
@@ -70,7 +70,7 @@
             "|                               |                      |               MIG M. |\n",
             "|===============================+======================+======================|\n",
             "|   0  Tesla T4            Off  | 00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   44C    P8    11W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
+            "| N/A   58C    P8    12W /  70W |      0MiB / 15360MiB |      0%      Default |\n",
             "|                               |                      |                  N/A |\n",
             "+-------------------------------+----------------------+----------------------+\n",
             "                                                                               \n",
@@ -113,24 +113,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6HXly6WcxJcv",
-        "outputId": "6de48fb6-de34-4a18-f58b-d5cc7911fc1b"
+        "outputId": "5bf79575-b725-4061-8c58-e3b5c0357461"
       },
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-10-30 01:47:45--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
-            "Resolving storage.googleapis.com (storage.googleapis.com)... 108.177.111.207, 142.250.128.207, 172.253.119.207, ...\n",
-            "Connecting to storage.googleapis.com (storage.googleapis.com)|108.177.111.207|:443... connected.\n",
+            "--2023-10-30 19:48:56--  https://storage.googleapis.com/ztm_tf_course/food_vision/10_food_classes_10_percent.zip\n",
+            "Resolving storage.googleapis.com (storage.googleapis.com)... 173.194.196.207, 173.194.197.207, 142.251.171.207, ...\n",
+            "Connecting to storage.googleapis.com (storage.googleapis.com)|173.194.196.207|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 168546183 (161M) [application/zip]\n",
             "Saving to: ‘10_food_classes_10_percent.zip’\n",
             "\n",
-            "10_food_classes_10_ 100%[===================>] 160.74M   188MB/s    in 0.9s    \n",
+            "10_food_classes_10_ 100%[===================>] 160.74M   144MB/s    in 1.1s    \n",
             "\n",
-            "2023-10-30 01:47:46 (188 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
+            "2023-10-30 19:48:57 (144 MB/s) - ‘10_food_classes_10_percent.zip’ saved [168546183/168546183]\n",
             "\n"
           ]
         }
@@ -150,37 +150,37 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "GsJAHAq7xJaQ",
-        "outputId": "a388d5fa-b12b-4180-9a70-18ed9de6ec10"
+        "outputId": "721d8ea0-1a76-4f94-ca53-948279e24001"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "there are 2 directories and 0 images in '10_food_classes_10_percent'.\n",
-            "there are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
-            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
             "there are 10 directories and 0 images in '10_food_classes_10_percent/test'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
             "there are 0 directories and 250 images in '10_food_classes_10_percent/test/ramen'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
             "there are 0 directories and 250 images in '10_food_classes_10_percent/test/sushi'.\n",
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/ice_cream'.\n",
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_curry'.\n",
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/steak'.\n",
             "there are 0 directories and 250 images in '10_food_classes_10_percent/test/fried_rice'.\n",
-            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n"
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/pizza'.\n",
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/grilled_salmon'.\n",
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/hamburger'.\n",
+            "there are 0 directories and 250 images in '10_food_classes_10_percent/test/chicken_wings'.\n",
+            "there are 10 directories and 0 images in '10_food_classes_10_percent/train'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/ramen'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/sushi'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/ice_cream'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_curry'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/steak'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/fried_rice'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/pizza'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/grilled_salmon'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/hamburger'.\n",
+            "there are 0 directories and 75 images in '10_food_classes_10_percent/train/chicken_wings'.\n"
           ]
         }
       ]
@@ -224,9 +224,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "4iqz84C5jcQd",
-        "outputId": "1a87ec9e-a7d7-46f4-f692-b5830db0f902"
+        "outputId": "9c11648a-ddac-4d4f-d838-1bff99a0d177"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -262,7 +262,7 @@
       "metadata": {
         "id": "7pxzBOW2xJXy"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -275,7 +275,7 @@
       "metadata": {
         "id": "z3J34EYOxJVV"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -321,7 +321,7 @@
       "metadata": {
         "id": "q14K88ryTIFY"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -335,7 +335,7 @@
       "metadata": {
         "id": "mxdlelqETJYw"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -349,7 +349,7 @@
       "metadata": {
         "id": "8BFgeUpPTJWX"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -377,7 +377,7 @@
         "\n",
         "  ##creating our own model\n",
         "  model = tf.keras.Sequential([\n",
-        "      feature_extraction_layers,\n",
+        "      feature_extractor_layer,\n",
         "      layers.Dense(num_classes, activation=\"softmax\", name=\"output_layer\")\n",
         "  ])\n",
         "\n",
@@ -386,7 +386,7 @@
       "metadata": {
         "id": "4-3wbtpcTJT2"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -407,6 +407,131 @@
       ],
       "metadata": {
         "id": "ZPwGlA-DTJRT"
+      },
+      "execution_count": 14,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#compile resnet model\n",
+        "resnet_model.compile(loss=tf.keras.losses.categorical_crossentropy,\n",
+        "                     optimizer=tf.keras.optimizers.Adam(),\n",
+        "                     metrics=[\"accuracy\"])\n"
+      ],
+      "metadata": {
+        "id": "a4GfnxrFJphL"
+      },
+      "execution_count": 16,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resnet_history = resnet_model.fit(train_data_10_percent, epochs=5,\n",
+        "                                  steps_per_epoch=len(train_data_10_percent),\n",
+        "                                  validation_data=test_data,\n",
+        "                                  validation_steps=len(test_data),\n",
+        "                                  callbacks=[create_tensorboard_callback(dir_name=\"tensorflow_hub\",\n",
+        "                                                                          experiment_name=\"resnet50V2\")])\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UKHlk-DAJpdQ",
+        "outputId": "f4550f59-de78-423f-e748-3974b8c188a4"
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving tensorboard log files to: tensorflow_hub/resnet50V2/20231030-200303\n",
+            "Epoch 1/5\n",
+            "24/24 [==============================] - 26s 563ms/step - loss: 1.8232 - accuracy: 0.3947 - val_loss: 1.1585 - val_accuracy: 0.6456\n",
+            "Epoch 2/5\n",
+            "24/24 [==============================] - 11s 485ms/step - loss: 0.8642 - accuracy: 0.7533 - val_loss: 0.8439 - val_accuracy: 0.7268\n",
+            "Epoch 3/5\n",
+            "24/24 [==============================] - 12s 524ms/step - loss: 0.6049 - accuracy: 0.8387 - val_loss: 0.7470 - val_accuracy: 0.7572\n",
+            "Epoch 4/5\n",
+            "24/24 [==============================] - 12s 500ms/step - loss: 0.4659 - accuracy: 0.8800 - val_loss: 0.6964 - val_accuracy: 0.7752\n",
+            "Epoch 5/5\n",
+            "24/24 [==============================] - 12s 504ms/step - loss: 0.3792 - accuracy: 0.9120 - val_loss: 0.6904 - val_accuracy: 0.7756\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "resnet_model.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "s3YEB8q6Jb05",
+        "outputId": "30153998-a290-4b51-a35a-f1ceeb4aeccf"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " Feature_extraction_layer (  (None, 2048)              23564800  \n",
+            " KerasLayer)                                                     \n",
+            "                                                                 \n",
+            " output_layer (Dense)        (None, 10)                20490     \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 23585290 (89.97 MB)\n",
+            "Trainable params: 20490 (80.04 KB)\n",
+            "Non-trainable params: 23564800 (89.89 MB)\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##better val_accuracy on the transfer learning technique"
+      ],
+      "metadata": {
+        "id": "xlkz84XmMSEm"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "xATNmeNsK2Wq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "5XUrkK8RJbye"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DMyguWtTJbv2"
       },
       "execution_count": null,
       "outputs": []
